# Ocaml

./: .gitignore
assignmentone/: assignmentone.opam  dune-project
assignmentone/lib/: worksheet.ml
assignmentthree/: assignmentthree.opam  dune-project
assignmentthree/lib/: dfsa.ml  dune  lang.ml
assignmentthree/test/: dune  test_dfsa.ml  test_lang.ml
assignmenttwo/: assignmenttwo.opam  dune-project
assignmenttwo/lib/: dune  langbasic.ml
assignmenttwo/test/: dune  test_langbasic.ml
book_exercises/: chapter7.ml  chapter_10.ml  chapter_6.cmi  chapter_6.cmo  chapter_6.ml  chapter_8.ml  chapter_9.ml  test_code.ml
