(lang dune 3.19)

(name assignmentone)

(generate_opam_files true)

(source
 (github adrianfrancalanza/ocaml))

(authors "Duncan Paul Attard" "Marietta Galea" "Gerard Tabone")

(maintainers "duncan.attard@um.edu.mt" "marietta.galea@um.edu.mt" "gerard.tabone@um.edu.mt")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name assignmentone)
 (synopsis "CPS 2001 - Programming paradigms OCaml worksheet")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
